<resources>
    <string name="app_name">Products</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_order_status">Order Status</string>
    <string name="menu_address">Address</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_contact">Contact us</string>
    <string name="menu_login">Login</string>
    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>

    <string name="title_activity_home_activty">HomeActivty</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_filter">Filter</string>
    <string name="title_previous">Previous</string>
    <string name="title_next">Next</string>
    <string name="title_price">Price</string>
    <string name="title_search">Search</string>

    <string name="text_start_auth">Start Auth</string>
    <string name="text_price_detail">PRICE DETAILS</string>
    <string name="text_price">Price</string>
    <string name="text_discount">Discount</string>
    <string name="text_delivery_charges">Delivery Charge</string>
    <string name="text_total_amount">Total Amount</string>
    <string name="text_place_order">Place Order</string>
    <string name="text_add_address"> + ADD A NEW ADDRESS </string>
    <string name="text_order_status_product_name">Ordered Product Name</string>
    <string name="text_order_status_product_status">Product Status</string>
    <string name="text_order_status_product_date">Ordered Date</string>
    <string name="text_recommendation">For You</string>
    <string name="text_product_dimension">Dimension</string>
    <string name="text_advance_option">Advance upload options</string>
    <string name="text_add_image">Add images</string>
    <string name="text_add_color">Add colors</string>
    <string name="text_product_image">Product Image</string>
    <string name="text_product_name">Product name</string>
    <string name="text_product_detail">Product detail</string>

    <string name="hint_phone">Enter Phone here</string>
    <string name="hint_verification">Verification code</string>
    <string name="hint_name">Name</string>
    <string name="hint_mobile">Enter 10 digit mobile</string>
    <string name="hint_pincode">Pincode</string>
    <string name="hint_address">Address (Area and Street)</string>
    <string name="hint_city">City/District/Town</string>
    <string name="hint_state">State</string>
    <string name="hint_search">Search for products</string>
    <string name="hint_product_item_name">Product item name</string>
    <string name="hint_product_item_detail">Product item detail</string>
    <string name="hint_height">Height</string>
    <string name="hint_length">Length</string>
    <string name="hint_width">Width</string>
    <string name="hint_product_category">Category</string>
    <string name="hint_product_sub_category">Sub category</string>
    <string name="hint_product_amount">Amount</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>

    <string name="action_settings">Settings</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_add_to_cart">Add to cart</string>
    <string name="action_verify_otp">Verify Phone No.</string>
    <string name="action_resend">Resend</string>
    <string name="action_search">Search</string>
    <string name="action_submit_product">Submit product</string>
    <string name="action_save_product">Save product</string>
    <string name="action_detail">Detail</string>
    <string name="action_publish">Publish</string>
    <string name="action_ok">OK</string>

    <string name="button_save_later">Save for later</string>
    <string name="button_remove">Remove</string>
    <string name="button_get_location">Get my current location</string>
    <string name="button_save">Save</string>

    <string name="cart_item_name">CartItemName</string>
    <string name="cart_item_short_name">CartItemShortName</string>
    <string name="cart_item_price">CartItemPrice</string>
    <string name="cart_item_quantity">Qty.</string>


    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="rs">\u20B9</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin_setting">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


</resources>