<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="com.inmy.products.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>


    <fragment
        android:id="@+id/nav_order_status"
        android:name="com.inmy.products.ui.order.OrderStatusFragment"
        android:label="@string/menu_order_status"
        tools:layout="@layout/fragment_order_status" />

    <fragment
        android:id="@+id/nav_offer"
        android:name="com.inmy.products.ui.offer.OfferFragment"
        android:label="@string/menu_offer"
        tools:layout="@layout/fragment_offer" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.inmy.products.ui.feedback.FeedbackFragment"
        android:label="@string/menu_feedback"
        tools:layout="@layout/fragment_feedback" />

    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.inmy.products.ui.contactus.ContactUsFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/contact_us_fragment"/>

</navigation>