<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/item_padding"
    android:layout_marginTop="@dimen/item_margin"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/text_price_detail"
                android:padding="3dip" />

        </TableRow>
        <View
            android:layout_height="2dip"
            android:background="#FF909090" />
        <TableRow>
            <TextView
                android:id="@+id/cartPriceText"
                android:layout_column="1"
                android:text="@string/text_price"
                android:padding="3dip" />

            <TextView
                android:id="@+id/cartPrice"
                android:text="000"
                android:gravity="end"
                android:padding="3dip" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/text_discount"
                android:padding="3dip" />
            <TextView
                android:id="@+id/cartDiscount"
                android:text="000"
                android:gravity="end"
                android:padding="3dip" />
        </TableRow>



        <TableRow>

            <TextView
                android:layout_column="1"
                android:text="@string/text_delivery_charges"
                android:padding="3dip" />
            <TextView
                android:id="@+id/cartDeliveryCharge"
                android:text="000"
                android:gravity="end"
                android:padding="3dip" />
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="#FF909090" />

        <TableRow>
            <TextView
                android:layout_column="1"
                android:text="@string/text_total_amount"
                android:padding="3dip" />
            <TextView
                android:id="@+id/cartTotalAmount"
                android:text="000"
                android:gravity="end"
                android:padding="3dip" />
        </TableRow>
        <View
            android:layout_height="2dip"
            android:background="#FF909090" />
        <TableRow>
            <TextView
                android:id="@+id/cartPlaceAmount"
                android:layout_column="1"
                android:text="000"
                android:padding="3dip"
                />
            <Button
                android:id="@+id/buttonPlaceOrder"
                android:text="@string/text_place_order"

                />
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>