<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_navigation.xml"
    app:startDestination="@+id/nav_admin_product_upload">
    <fragment
        android:id="@+id/nav_admin_product_upload"
        android:name="com.inmy.products.ui.admin.productUpload.AdminProductUploadFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_admin_product_upload"/>


    <fragment
        android:id="@+id/nav_admin_analysis"
        android:name="com.inmy.products.ui.admin.dashboard.ProductListFragment"
        android:label="@string/menu_order_status"
        tools:layout="@layout/fragment_product_list" />

    <fragment
        android:id="@+id/nav_admin_setting"
        android:name="com.inmy.products.ui.admin.notifications.NotificationsFragment"
        android:label="@string/menu_address"
        tools:layout="@layout/fragment_notifications" />
</navigation>