<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/item_padding"
    android:layout_margin="@dimen/item_margin_2"
    android:background="@drawable/item_border"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/cartItemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/title_textSize"
        android:textColor="@color/black"
        android:text="@string/cart_item_name"/>

    <TextView
        android:id="@+id/cartItemShortDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cartItemName"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="@dimen/detail_textSize"
        android:text="@string/cart_item_short_name"
        />

    <TextView
        android:id="@+id/cartItemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/cartItemShortDescription"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/cart_item_price"/>

    <ImageView
        android:id="@+id/cartItemImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/cartItemQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/item_border"
        app:layout_constraintTop_toBottomOf="@+id/cartItemPrice"
        android:layout_marginTop="@dimen/item_margin"
        app:layout_constraintStart_toStartOf="parent"

         />

    <Button
        android:id="@+id/cartButtonSaveForLater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save_later"
        app:layout_constraintTop_toBottomOf="@+id/cartItemImage"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/cartButtonRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_remove"
        app:layout_constraintTop_toBottomOf="@+id/cartItemImage"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>