<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

        <variable
            name="adminProductUploadViewModel"
            type="com.inmy.products.ui.admin.productUpload.AdminProductUploadViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/item_margin"
        android:layout_marginBottom="?android:attr/actionBarSize">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:isScrollContainer="true">

    <ImageView
        android:id="@+id/imageViewUploadProduct"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:maxHeight="200dp"
        android:maxWidth="200dp"
        android:background="@drawable/item_border"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/item_margin"
        />
    <ImageButton
        android:id="@+id/imageButtonUploadProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@android:drawable/ic_menu_upload"
        app:layout_constraintBottom_toTopOf="@+id/editTextProductItemName"
        android:layout_margin="@dimen/item_margin"/>


    <EditText
        android:id="@+id/editTextProductItemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_product_item_name"
        android:background="@drawable/item_border"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUploadProduct"
        android:padding="@dimen/item_padding"
        android:layout_margin="@dimen/item_margin"/>
    <EditText
        android:id="@+id/editTextProductItemDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_product_item_detail"
        android:background="@drawable/item_border"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductItemName"
        android:padding="@dimen/item_padding"
        android:layout_margin="@dimen/item_margin"/>

    <RelativeLayout
        android:id="@+id/productDimension"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductItemDetail"
        android:padding="@dimen/item_padding"
        android:layout_margin="@dimen/item_margin"
        android:background="@drawable/item_border">

        <TextView
            android:id="@+id/textViewProductDimension"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_product_dimension"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewProductDimension"
            android:orientation="horizontal"
            >
            <EditText
                android:id="@+id/productLength"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_length"
                android:layout_margin="1dp"
                android:background="@drawable/item_border"/>
            <EditText
                android:id="@+id/productWidth"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_width"
                android:layout_margin="1dp"
                android:background="@drawable/item_border"/>
            <EditText
                android:id="@+id/productHeight"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_height"
                android:layout_margin="1dp"
                android:background="@drawable/item_border"/>
        </LinearLayout>
    </RelativeLayout>

    <EditText
        android:id="@+id/editTextProductItemCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_product_category"
        android:background="@drawable/item_border"
        app:layout_constraintTop_toBottomOf="@+id/productDimension"
        android:padding="@dimen/item_padding"
        android:layout_margin="@dimen/item_margin"/>
    <EditText
        android:id="@+id/editTextProductItemSubCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_product_sub_category"
        android:background="@drawable/item_border"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductItemCategory"
        android:padding="@dimen/item_padding"
        android:layout_margin="@dimen/item_margin"/>
    <EditText
        android:id="@+id/editTextProductItemPriceDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_product_amount"
        android:background="@drawable/item_border"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductItemSubCategory"
        android:padding="@dimen/item_padding"
        android:layout_margin="@dimen/item_margin"/>
    <Button
        android:id="@+id/buttonProductSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_submit"
        app:layout_constraintTop_toBottomOf="@+id/editTextProductItemPriceDetail"
        android:layout_margin="@dimen/item_margin"
        android:padding="@dimen/item_padding"/>




</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>