<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/item_margin"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/imageViewProductDefaultImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:maxHeight="150dp"
        android:maxWidth="150dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/item_margin"/>

    <ImageButton
        android:id="@+id/ImageButtonProductDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_delete_24"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/linearLayoutProductList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/item_margin"
        app:layout_constraintTop_toBottomOf="@+id/ImageButtonProductDelete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewProductDefaultImage">

        <TextView
            android:id="@+id/textProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_textSize"
            android:text="@string/text_product_name"/>
        <TextView
            android:id="@+id/textProductDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/detail_textSize"
            android:text="@string/text_product_detail"/>
        <TextView
            android:id="@+id/textProductPrize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/detail_textSize"
            android:text="@string/text_price_detail"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutProductAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/item_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutProductList">

        <Button
            android:id="@+id/productButtonDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:layout_margin="@dimen/item_margin_2"
            android:text="@string/action_detail"/>

        <Button
            android:id="@+id/productButtonPublish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:layout_margin="@dimen/item_margin_2"
            android:text="@string/action_publish"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>