<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageViewOrderStatus"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewOrderStatusProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_order_status_product_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageViewOrderStatus"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewOrderStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_order_status_product_status"
        app:layout_constraintStart_toEndOf="@+id/imageViewOrderStatus"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrderStatusProductName" />

    <TextView
        android:id="@+id/textViewProductOrderDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_order_status_product_date"
        app:layout_constraintStart_toEndOf="@+id/imageViewOrderStatus"
        app:layout_constraintTop_toBottomOf="@+id/textViewOrderStatus" />


</androidx.constraintlayout.widget.ConstraintLayout>